# RLMs_MLR

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
configs/: config.yaml
configs/evaluate/: fashion_mnist.yaml  mnist.yaml
configs/experiment/: fashion_mnist.yaml  mnist.yaml
configs/hp_tuning/: lr_demo_search.yaml
configs/model/: mlp.yaml
configs/optimizer/: adam.yaml  adamw.yaml
configs/system/: robins_system.yaml
configs/train/: fashion_mnist.yaml  mnist.yaml
configs/trainer/: trainer.yaml
configs/tuning/: sample_search.yaml
configs/visualize/: fashion_mnist.yaml  mnist.yaml
data/: config.yaml  hp_tuning.yaml
data/configs/: hp_tuning.yaml
docs/: .buildinfo  .buildinfo.bak  genindex.html  index.html  installation.html  py-modindex.html  rlms_mlr.augmentation.html  rlms_mlr.callbacks.html  rlms_mlr.data.html  rlms_mlr.downloaders.html  rlms_mlr.html  rlms_mlr.loggers.html  rlms_mlr.models.html  rlms_mlr.trainer.html  rlms_mlr.utils.html  search.html  searchindex.js
docs/_modules/: index.html
docs/html/: .buildinfo.bak  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  rlms_mlr.data.html  rlms_mlr.html  rlms_mlr.loggers.html  rlms_mlr.trainer.html  search.html  searchindex.js
docs/source/: conf.py  index.rst  modules.rst  rlms_mlr.callbacks.rst  rlms_mlr.data.rst  rlms_mlr.downloaders.rst  rlms_mlr.loggers.rst  rlms_mlr.models.rst  rlms_mlr.rst  rlms_mlr.utils.rst
docs_src/source/: conf.py  (+3 more)
rlms_mlr/: __init__.py  trainer.py
scripts/: main.py
src/: __init__.py  config.py  main.py
(+67 files in other folders)
