[project]
name = "rlms-mlr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "hydra-core>=1.3.2",
    "optuna-fast-fanova>=0.0.4",
    "psycopg2>=2.9.10",
    "sqlalchemy==1.4.46",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126--"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
